--- a/lenia-model/test_bis.html
+++ b/lenia-model/test_bis.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simulation Lenia Interactive</title>
-  <style>
-    body { background: #111; color: white; font-family: Arial, sans-serif; text-align: center; }
-    canvas { background: black; margin-top: 10px; image-rendering: pixelated; }
-    .controls { margin-top: 10px; }
-    .slider-group { margin: 10px; }
-    label { display: block; font-weight: bold; }
-    input[type=range] { width: 300px; }
-    button { margin: 5px; font-size: 16px; padding: 8px 12px; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Simulation Lenia Interactive</title>
+<style>
+  body { background: #111; color: white; font-family: Arial, sans-serif; text-align: center; }
+  canvas { background: black; margin-top: 10px; image-rendering: pixelated; }
+  .controls { margin-top: 10px; }
+  .slider-group { margin: 10px; }
+  label { display: block; font-weight: bold; }
+  input[type=range] { width: 300px; }
+  button { margin: 5px; font-size: 16px; padding: 8px 12px; }
+  .status { margin-top: 10px; font-size: 18px; }
+</style>
 </head>
 <body>
 
 <h1>Lenia Simulation Interactive</h1>
+
 <canvas id="lenia" width="256" height="144" style="width: 1024px; height: 576px;"></canvas>
 
 <div class="controls">
-  <div class="slider-group">
-    <label>R (noyau) : <span id="Rval">13</span></label>
-    <input id="Rslider" type="range" min="1" max="50" step="1" value="13" />
-  </div>
-  <div class="slider-group">
-    <label>Rayon initial (cellule) : <span id="radiusVal">36</span></label>
-    <input id="radiusSlider" type="range" min="1" max="100" step="1" value="36" />
-  </div>
   <div class="slider-group">
     <label>μ (mu) noyau: <span id="muKval">0.5</span></label>
     <input id="muK" type="range" min="0" max="1" step="0.01" value="0.5" />
@@ -41,27 +35,39 @@
     <input id="muG" type="range" min="0" max="1" step="0.01" value="0.15" />
   </div>
   <div class="slider-group">
-    <label>σ (sigma) croissance: <span id="sigmaGval">0.015</span></label>
+    <label>σ (sigma) croissance: <span id="sigmaGval">0.01</span></label>
     <input id="sigmaG" type="range" min="0.001" max="0.1" step="0.001" value="0.015" />
   </div>
   <div class="slider-group">
-    <label>Δt (dt) : <span id="dtval">0.1</span></label>
+    <label>Δt (dt): <span id="dtval">0.1</span></label>
     <input id="dt" type="range" min="0.001" max="0.3" step="0.001" value="0.1" />
+  </div>
+  <div class="slider-group">
+    <label>Rayon noyau (R): <span id="Rval">13</span></label>
+    <input id="R" type="range" min="1" max="50" step="1" value="13" />
+  </div>
+  <div class="slider-group">
+    <label>Rayon initial cellule (radius): <span id="radiusVal">36</span></label>
+    <input id="radius" type="range" min="1" max="100" step="1" value="36" />
   </div>
 
   <button id="startStopBtn">Start</button>
   <button id="restartBtn">Restart</button>
-  <p>Temps (tours) : <span id="stepCounter">0</span></p>
+
+  <div class="status">
+    Temps (tours): <span id="iteration">0</span><br>
+    Masse: <span id="mass">0</span>
+  </div>
 </div>
 
 <script>
 const width = 256;
 const height = 144;
-let R = 13;
-let radius = 36;
 
 function create2DArray(rows, cols, fill=0) {
-  return Array.from({length: rows}, () => new Float32Array(cols).fill(fill));
+  let arr = new Array(rows);
+  for(let i=0; i<rows; i++) arr[i] = new Float32Array(cols).fill(fill);
+  return arr;
 }
 
 function gauss(x, mu, sigma) {
@@ -70,21 +76,21 @@ function gauss(x, mu, sigma) {
 
 function createKernel(R, mu, sigma) {
   const size = 2 * R;
-  const kernel = create2DArray(size, size);
+  let kernel = create2DArray(size, size);
   let sum = 0;
-  for (let y = 0; y < size; y++) {
-    for (let x = 0; x < size; x++) {
+  for(let y=0; y<size; y++) {
+    for(let x=0; x<size; x++) {
       const dx = x - R + 1;
       const dy = y - R + 1;
       const d = Math.sqrt(dx*dx + dy*dy) / R;
-      if (d <= 1) {
+      if(d <= 1) {
         kernel[y][x] = gauss(d, mu, sigma);
         sum += kernel[y][x];
       }
     }
   }
-  for (let y = 0; y < size; y++) {
-    for (let x = 0; x < size; x++) {
+  for(let y=0; y<size; y++) {
+    for(let x=0; x<size; x++) {
       kernel[y][x] /= sum;
     }
   }
@@ -100,12 +106,12 @@ function convolve2D(X, K) {
   const cols = X[0].length;
   const ksize = K.length;
   const R = Math.floor(ksize / 2);
-  const out = create2DArray(rows, cols);
-  for (let y = 0; y < rows; y++) {
-    for (let x = 0; x < cols; x++) {
+  let out = create2DArray(rows, cols);
+  for(let y=0; y<rows; y++) {
+    for(let x=0; x<cols; x++) {
       let sum = 0;
-      for (let ky = 0; ky < ksize; ky++) {
-        for (let kx = 0; kx < ksize; kx++) {
+      for(let ky=0; ky<ksize; ky++) {
+        for(let kx=0; kx<ksize; kx++) {
           let yy = (y + ky - R + rows) % rows;
           let xx = (x + kx - R + cols) % cols;
           sum += X[yy][xx] * K[ky][kx];
@@ -118,13 +124,13 @@ function convolve2D(X, K) {
 }
 
 function infernoColor(value) {
-  if (value <= 0) return [0, 0, 0];
-  if (value >= 1) return [255, 255, 255];
-  if (value < 0.25) return lerpColor([0,0,0],[75,0,130], value/0.25);
-  if (value < 0.5) return lerpColor([75,0,130],[255,105,180], (value-0.25)/0.25);
-  if (value < 0.75) return lerpColor([255,105,180],[255,140,0], (value-0.5)/0.25);
-  if (value < 0.9) return lerpColor([255,140,0],[255,255,0], (value-0.75)/0.15);
-  return lerpColor([255,255,0],[255,255,255], (value-0.9)/0.1);
+  if(value <= 0) return [0,0,0];
+  if(value >= 1) return [255,255,255];
+  if(value < 0.25) return lerpColor([0,0,0],[75,0,130], value / 0.25);
+  else if(value < 0.5) return lerpColor([75,0,130],[255,105,180], (value - 0.25) / 0.25);
+  else if(value < 0.75) return lerpColor([255,105,180],[255,140,0], (value - 0.5) / 0.25);
+  else if(value < 0.9) return lerpColor([255,140,0],[255,255,0], (value - 0.75) / 0.15);
+  else return lerpColor([255,255,0],[255,255,255], (value - 0.9) / 0.1);
 }
 
 function lerpColor(c1, c2, t) {
@@ -132,11 +138,11 @@ function lerpColor(c1, c2, t) {
 }
 
 function initGrid(rows, cols, radius) {
-  const grid = create2DArray(rows, cols);
+  let grid = create2DArray(rows, cols);
   const cx = Math.floor(cols/2);
   const cy = Math.floor(rows/2);
-  for (let y = 0; y < rows; y++) {
-    for (let x = 0; x < cols; x++) {
+  for(let y=0; y<rows; y++) {
+    for(let x=0; x<cols; x++) {
       let dx = x - cx;
       let dy = y - cy;
       grid[y][x] = Math.exp(-0.5 * (dx*dx + dy*dy) / (radius*radius));
@@ -145,59 +151,93 @@ function initGrid(rows, cols, radius) {
   return grid;
 }
 
+let radius = 36;
+let R = 13;
+let muK = 0.5;
+let sigmaK = 0.15;
+let muG = 0.15;
+let sigmaG = 0.015;
+let dt = 0.1;
+
 let X = initGrid(height, width, radius);
-let muK = 0.5, sigmaK = 0.15, muG = 0.15, sigmaG = 0.015, dt = 0.1;
 let K = createKernel(R, muK, sigmaK);
-let steps = 0;
 
 const canvas = document.getElementById('lenia');
 const ctx = canvas.getContext('2d');
 const imageData = ctx.createImageData(width, height);
-let running = false, animationId = null;
 
-const sliders = {
-  Rslider: ['Rval', v => R = parseInt(v)],
-  radiusSlider: ['radiusVal', v => radius = parseInt(v)],
-  muK: ['muKval', v => muK = parseFloat(v)],
-  sigmaK: ['sigmaKval', v => sigmaK = parseFloat(v)],
-  muG: ['muGval', v => muG = parseFloat(v)],
-  sigmaG: ['sigmaGval', v => sigmaG = parseFloat(v)],
-  dt: ['dtval', v => dt = parseFloat(v)]
-};
+let running = false;
+let animationId = null;
+let iteration = 0;
 
-for (let id in sliders) {
-  const [valId, setter] = sliders[id];
-  document.getElementById(id).oninput = e => {
-    setter(e.target.value);
-    document.getElementById(valId).textContent = e.target.value;
-    K = createKernel(R, muK, sigmaK);
-  };
+const muKSlider = document.getElementById('muK');
+const sigmaKSlider = document.getElementById('sigmaK');
+const muGSlider = document.getElementById('muG');
+const sigmaGSlider = document.getElementById('sigmaG');
+const dtSlider = document.getElementById('dt');
+const RSlider = document.getElementById('R');
+const radiusSlider = document.getElementById('radius');
+
+const muKVal = document.getElementById('muKval');
+const sigmaKVal = document.getElementById('sigmaKval');
+const muGVal = document.getElementById('muGval');
+const sigmaGVal = document.getElementById('sigmaGval');
+const dtVal = document.getElementById('dtval');
+const RVal = document.getElementById('Rval');
+const radiusVal = document.getElementById('radiusVal');
+
+const iterationDisplay = document.getElementById('iteration');
+const massDisplay = document.getElementById('mass');
+
+function updateParams() {
+  muK = parseFloat(muKSlider.value);
+  sigmaK = parseFloat(sigmaKSlider.value);
+  muG = parseFloat(muGSlider.value);
+  sigmaG = parseFloat(sigmaGSlider.value);
+  dt = parseFloat(dtSlider.value);
+  R = parseInt(RSlider.value);
+  radius = parseInt(radiusSlider.value);
+
+  muKVal.textContent = muK.toFixed(2);
+  sigmaKVal.textContent = sigmaK.toFixed(3);
+  muGVal.textContent = muG.toFixed(2);
+  sigmaGVal.textContent = sigmaG.toFixed(3);
+  dtVal.textContent = dt.toFixed(3);
+  RVal.textContent = R;
+  radiusVal.textContent = radius;
+
+  K = createKernel(R, muK, sigmaK);
 }
 
-const startStopBtn = document.getElementById('startStopBtn');
-const restartBtn = document.getElementById('restartBtn');
-const stepCounter = document.getElementById('stepCounter');
+muKSlider.oninput = updateParams;
+sigmaKSlider.oninput = updateParams;
+muGSlider.oninput = updateParams;
+sigmaGSlider.oninput = updateParams;
+dtSlider.oninput = updateParams;
+RSlider.oninput = updateParams;
+radiusSlider.oninput = updateParams;
 
-startStopBtn.onclick = () => {
+document.getElementById('startStopBtn').onclick = () => {
   running = !running;
-  startStopBtn.textContent = running ? 'Stop' : 'Start';
-  if (running) loop();
-  else if (animationId) cancelAnimationFrame(animationId);
+  document.getElementById('startStopBtn').textContent = running ? 'Stop' : 'Start';
+  if(running) loop();
+  else if(animationId) cancelAnimationFrame(animationId);
 };
 
-restartBtn.onclick = () => {
+document.getElementById('restartBtn').onclick = () => {
   X = initGrid(height, width, radius);
-  steps = 0;
-  stepCounter.textContent = steps;
-  if (!running) drawGrid();
+  iteration = 0;
+  updateStatus();
+  if(!running) drawGrid();
 };
 
 function evolve(X) {
-  let U = convolve2D(X, K);
-  const rows = X.length, cols = X[0].length;
-  const Xnew = create2DArray(rows, cols);
-  for (let y = 0; y < rows; y++) {
-    for (let x = 0; x < cols; x++) {
+  const U = convolve2D(X, K);
+  const rows = X.length;
+  const cols = X[0].length;
+  let Xnew = create2DArray(rows, cols);
+  for(let y=0; y<rows; y++) {
+    for(let x=0; x<cols; x++) {
       let val = X[y][x] + dt * growth(U[y][x], muG, sigmaG);
       Xnew[y][x] = Math.min(1, Math.max(0, val));
     }
@@ -206,28 +246,37 @@ function evolve(X) {
 }
 
 function drawGrid() {
+  let sum = 0;
   let i = 0;
-  for (let y = 0; y < height; y++) {
-    for (let x = 0; x < width; x++) {
-      const c = infernoColor(X[y][x]);
-      imageData.data[i++] = c[0];
-      imageData.data[i++] = c[1];
-      imageData.data[i++] = c[2];
+  for(let y=0; y<height; y++) {
+    for(let x=0; x<width; x++) {
+      const val = X[y][x];
+      const color = infernoColor(val);
+      sum += val;
+      imageData.data[i++] = color[0];
+      imageData.data[i++] = color[1];
+      imageData.data[i++] = color[2];
       imageData.data[i++] = 255;
     }
   }
   ctx.putImageData(imageData, 0, 0);
+  massDisplay.textContent = sum.toFixed(2);
+}
+
+function updateStatus() {
+  iterationDisplay.textContent = iteration;
 }
 
 function loop() {
   X = evolve(X);
+  iteration++;
+  updateStatus();
   drawGrid();
-  steps++;
-  stepCounter.textContent = steps;
   animationId = requestAnimationFrame(loop);
 }
 
 drawGrid();
 </script>
+
 </body>
 </html>
